--- a/accescontrolsystem/docker-compose.yml
+++ b/accescontrolsystem/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       while ! nc -z db 5432; do sleep 1 && echo 'waiting database'; done;
       python3 manage.py makemigrations;
       python3 manage.py migrate;
-      python3 manage.py runserver 0.0.0.0:8000"
+      python3 manage.py runserver 0.0.0.0:8000";
     
     restart: always
     
